# bookB116-backend

./: .flaskenv  .gitignore  README.md  noc  pyproject.toml  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  test.yml
bookB116/: __init__.py  database.py
bookB116/api/: __init__.py
bookB116/api/auth/: __init__.py  forms.py  routes.py  utils.py
bookB116/api/auth/emails/: __init__.py  vercode.html
bookB116/api/booking/: __init__.py  cli.py  database.py  forms.py  routes.py
bookB116/api/booking/emails/: __init__.py  summary.html
bookB116/cli/: __init__.py  database.py  student.py
bookB116/email/: __init__.py  core.py
bookB116/settings/: __init__.py  common.yaml  development.yaml  local.template.yaml  production.yaml  testing.yaml
bookB116/utils/: crypt.py  log.py  validation.py
bookB116/utils/session/: __init__.py  sessions.py
migrations/: alembic.ini
tests/: __init__.py  auth_test.py  cli_test.py  conftest.py  email_test.py  student_db_test.py  test_data.csv
tests/booking/: __init__.py  booking_test.py  process_test.py  wrong_time_test.py
